# papyrus

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .secretignore  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.rst  TODO.rst  TODO.txt  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: publish.yaml  pypi-login  renovate.json5
.github/workflows/: main.yaml
ci/: requirements.txt
docs/: Makefile  conf.py  creating_mapfish_views.rst  geojson_renderer.rst  index.rst  xsd_renderer.rst
papyrus/: .protocol.py.swp  __init__.py  _shapely_utils.py  geo_interface.py  geojsonencoder.py  geomixin.py  geomtable.py  protocol.py  renderers.py  within_distance.py  xsd.py
papyrus/tests/: .test_protocol.py.swp  __init__.py  test_geo_interface.py  test_init.py  test_protocol.py  test_renderers.py  views.py
