[tool.ruff]
target-version = "py39"

[tool.poetry]
name = "papyrus"
version = "0.0.0"
description="Geospatial Extensions for Pyramid"
readme = "README.md"
authors = ["Camptocamp <info@camptocamp.com>"]
keywords = ["FOSS4G", "Pylons", "Pyramid"]
repository = "https://github.com/camptocamp/papyrus"
license = "BSD"
packages = [{ include = "papyrus" }]
classifiers = [
          'Framework :: Pyramid',
          'Intended Audience :: Developers',
          'Operating System :: OS Independent',
          'Programming Language :: Python',
          'Programming Language :: Python :: 3.9',
          'Programming Language :: Python :: 3.10',
          'Programming Language :: Python :: 3.11',
          'Programming Language :: Python :: 3.12',
          'License :: OSI Approved :: BSD License',
          'Programming Language :: Python',
          'Topic :: Internet :: WWW/HTTP',
]

[tool.poetry.scripts]
security-md = "security_md.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyramid="2.0.2"
geojson="3.2.0"
shapely = "2.0.7"
geoalchemy2 = "0.17.0"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.14.1", extras = ["with-bandit", "with-mypy", "with-pyroma", "with-ruff"] }
prospector-profile-utils = "1.17.0"
prospector-profile-duplicated = "1.10.4"
pytest = "8.3.4"
pyramid-handlers = "0.5"
psycopg2 = "2.9.10"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-plugin-tweak-dependencies-version",
    "poetry-dynamic-versioning",
    "poetry-plugin-drop-python-upper-constraint",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"
