[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "papyrus"
version = "0.0.0"
description="Geospatial Extensions for Pyramid"
readme = "README.md"
authors = ["Camptocamp <info@camptocamp.com>"]
keywords = ["FOSS4G", "Pylons", "Pyramid"]
repository = "https://github.com/camptocamp/papyrus"
license = "BSD"
packages = [{ include = "papyrus" }]
classifiers = [
    'Framework :: Pyramid',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet :: WWW/HTTP',
]

[tool.poetry.scripts]
security-md = "security_md.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyramid="2.0.2"
geojson="3.2.0"
shapely = "2.0.7"
geoalchemy2 = "0.17.1"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.16.0", extras = ["with-bandit", "with-mypy", "with-pyroma", "with-ruff", "with_ruff", "with_pyroma"] }
prospector-profile-utils = "1.22.3"
prospector-profile-duplicated = "1.10.5"
pytest = "8.3.5"
pyramid-handlers = "0.5"
psycopg2 = "2.9.10"
id = "1.5.0"
claims = "0.3.0"
types-requests = "2.32.0.20250328"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-plugin-tweak-dependencies-version",
    "poetry-dynamic-versioning",
    "poetry-plugin-drop-python-upper-constraint",
]
build-backend = "poetry.core.masonry.api"
