[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyramid="2.0.2"
geojson="3.2.0"
shapely = "2.1.2"
geoalchemy2 = "0.18.0"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.3", extras = ["with-bandit", "with-mypy", "with-pyroma", "with-ruff", "with_ruff", "with_pyroma"] }
prospector-profile-utils = "1.26.5"
prospector-profile-duplicated = "1.10.5"
pytest = "8.4.2"
pyramid-handlers = "0.5"
psycopg2 = "2.9.11"
id = "1.5.0"
claims = "0.3.0"
types-requests = "2.32.4.20250913"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"

[project]
dependencies = ["pyramid<3,>=2", "geojson<4,>=3", "shapely<3,>=2", "geoalchemy2<1,>=0"]
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]
name = "papyrus"
description = "Geospatial Extensions for Pyramid"
readme = "README.md"
keywords = ["FOSS4G", "Pylons", "Pyramid"]
license = "BSD"
classifiers = [
    'Framework :: Pyramid',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet :: WWW/HTTP',
]
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
packages = [{ include = "papyrus" }]

[project.urls]
repository = "https://github.com/camptocamp/papyrus"
"Bug Tracker" = "https://github.com/camptocamp/papyrus/issues"

[project.scripts]
security-md = "security_md.cli:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-dynamic-versioning",
]
build-backend = "poetry.core.masonry.api"
